# raytracing

./: CMakeLists.txt  README.md
app/: main.cpp
src/: camera.h  hitable.h  hitable_list.h  material.h  misc.h  ray.h  sphere.h  vec3.h
